# worldIndicesScraper

./: .flake8  .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  yahoo_world_indices_scraper.py
app/: yahoo_world_indices_scraper.py
features/: scrape_world_indices.feature
features/configuration/: configuration.py
features/pages/: Page.py  WorldIndicesPage.py
features/steps/: ScrapeANamedIndexSteps.py
